<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="7dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/kolobok"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription, ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_textInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/custom_email_icon"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/email_textInput"
        app:layout_constraintStart_toStartOf="@id/email_textInput"
        app:layout_constraintTop_toBottomOf="@id/email_textInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdit"
            android:drawableEnd="@drawable/custom_password_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="268dp"
        android:layout_height="44dp"
        android:layout_marginTop="7dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/password_textInput"
        app:layout_constraintStart_toStartOf="@+id/password_textInput"
        app:layout_constraintTop_toBottomOf="@id/password_textInput"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>